[package]
name = "blockchain_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.0", features = ["rustls", "ws"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
regex = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"