[package]
name = "blockchain_event_project"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1.28", features = ["full", "rt-multi-thread", "macros"] }
futures = "0.3"
regex = "1.9"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
hex = "0.4"
url = "2.4"
bytes = "1.4"
env_logger = "0.10"
log = "0.4"